--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "prettier": "^3.1.1",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "razorpay": "^2.9.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
