--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "pdfkit": "^0.14.0",
     "prettier": "^3.1.1",
     "randomstring": "^1.3.0",
     "razorpay": "^2.9.2",
